buttun onclick+change text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>omri</title>
 </head>
 <body> 
-<script src="hello.js"></script>
+<div>
+   <h1 id="omri">omri</h1> 
+
+</div>
+<!-- <script src="hello.js"></script> -->
+<button type="button" onclick="omriuliel()">show!!!</button>
+<script src="hello.js">
+
+</script>
+
 
 </body>
 </html>
